# SP500_INDEX_Analisis

./: .env.example  .envexample  .gitignore  .pre-commit-config.yaml  ALGO TRADING.lnk  Data Engineering.xlsx  FPI_Feature_Section_step_6.py  Makefile  PREPROCESSING_STRUCTURE.md  Preprocess.ipynb  README.md  ajustar_datos_step_8.py  clean_columns_step_3.py  convert_notebook.py  datos_economicos_normales_procesados.xlsx  datos_economicos_other_procesados.xlsx  datos_economicos_procesados_Fred.xlsx  datos_economicos_procesados_cp.xlsx  datos_eoe_universal_procesados.xlsx  economia_integrada.xlsx  example.env  file_inventory_test.xlsx  generate_categories_step_2.py  hechos_predicciones_fields_con_sp500.csv  hechos_predicciones_fields_con_sp500_con_forecasting_avanzado.csv  hechos_predicciones_fields_con_sp500_con_predicciones_sp500.csv  hechos_predicciones_fields_con_sp500_powerbi_ready.csv  ied_trimestral.xlsx  merge_excels_step_1.py  mypy.ini  preprocess.py  preprocess_step_0.py  pyproject.toml  remesas_diarias.xlsx  requirement.txt  run_pipeline.py  run_pipeline_step_4.py  step_0_preprocess.py  step_1_merge_excels.py  test_path_manager.py  (+1 more)
Data/: opens.bat
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
data/: README.md  opens.bat
docs/: PreprocessingService.md  architecture.md
logs/: README.md
models/: catboosttrial11.pkl  catboosttrial18.pkl  lightgbmtrial11.pkl  lightgbmtrial17.pkl  lightgbmtrial2.pkl  lightgbmtrial5.pkl  lstm_model.h5  mlptrial10.pkl  mlptrial11.pkl  mlptrial3.pkl  mlptrial5.pkl  svmtrial0.pkl  svmtrial2.pkl  xgboosttrial11.pkl  xgboosttrial7.pkl
notebooks/: ARIMA_Pipeline.ipynb  ML_Pipeline.ipynb  Preprocess copy.ipynb  Preprocess.ipynb  README.md  setup_notebook.py
output/: datos_eoe_universal_procesados.xlsx  datos_tes_procesados.xlsx
outputs/: archivo_para_powerbi3.csv  archivo_para_powerbi4.csv
pipelines/: Data Engineering.xlsx  Series USDCOP Final.xlsx  full_consolidated_inventory.xlsx  step_0_preprocess.py  step_1_merge_excels.py  step_2_generate_categories.py  step_3_clean_columns.py  step_4_transform_features.py  step_5_remove_relations.py  step_6_fpi_selection.py  step_7_train_models.py  step_8_prepare_output.py  ~$Data Engineering.xlsx
plots/: fpi_drifts_20250522_164631.csv  fpi_drifts_20250523_063118.csv  fpi_drifts_20250523_092434.csv  fpi_drifts_20250612_135317.csv  fpi_drifts_20250616_100506.csv
pydantic/: __init__.py
scripts/: run_full_pipeline.py  run_preprocessing.py  run_training.py
src/: README.md  utils.py
tests/: README.md  conftest.py  failing_step.py  test_cleaning.py  test_cli.py  test_container_services.py  test_correlation_remover.py  test_filter_20days.py  test_fpi_selection.py  test_importance_plots.py  test_inference_modules.py  test_inference_service.py  test_linting.py  test_logger.py  test_metrics_plots.py  test_plotters.py  (+9 more)
(+807 files in other folders)
