[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sp500-index-analysis"
version = "0.1.0"
description = "Data transformation pipeline for SP500 index analysis"
authors = [{name = "Pedro"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "catboost>=1.1",
    "feature-engine>=1.4",
    "pandas-market-calendars>=3.0",
    "optuna>=3.0.0",
    "lightgbm>=3.3.0",
    "xgboost>=1.5.0",
    "openpyxl>=3.0.0",
    "ta>=0.10.0",
    "statsmodels>=0.13.0",
]
