[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sp500-index-analysis"
version = "0.1.0"
description = "Data transformation pipeline for SP500 index analysis"
authors = [{name = "Pedro"}]
license = {text = "MIT"}
keywords = ["sp500", "machine-learning", "finance"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
urls = {"repository" = "https://github.com/pspedro19/sp500-index-analysis"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "catboost>=1.1",
    "feature-engine>=1.4",
    "pandas-market-calendars>=3.0",
    "optuna>=3.0.0",
    "lightgbm>=3.3.0",
    "xgboost>=1.5.0",
    "openpyxl>=3.0.0",
    "ta>=0.10.0",
    "statsmodels>=0.13.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "pytest>=7.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88

[tool.setuptools.packages.find]
include = ["src*"]
