[tool.black]
line-length = 120
target-version = ['py311']
skip-string-normalization = true

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sp500-index-analysis"
version = "0.1.0"
description = "SP500 Index Analysis data transformation pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "catboost>=1.1",
    "feature-engine>=1.4",
    "pandas-market-calendars>=3.0",
    "optuna>=3.0.0",
    "lightgbm>=3.3.0",
    "xgboost>=1.5.0",
    "openpyxl>=3.0.0",
    "ta>=0.10.0",
    "statsmodels>=0.13.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "mypy"]

[project.scripts]
sp500 = "sp500_analysis.__main__:main"

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
addopts = "-ra --cov=src --cov=tests --cov-report=term-missing"
testpaths = ["tests"]
